fixed jira bugs

--- a/app/src/main/res/layout/bottomsheet_log_weight_selection.xml
+++ b/app/src/main/res/layout/bottomsheet_log_weight_selection.xml
@@ -132,6 +132,7 @@
             android:layout_marginStart="15dp"
             android:layout_gravity="center"
             android:gravity="center"
+            android:visibility="invisible"
             android:orientation="horizontal">
 
             <TextView
