--- a/app/src/main/res/layout/custom_tab_recipe_search.xml
+++ b/app/src/main/res/layout/custom_tab_recipe_search.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:id="@+id/rootTabLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/tab_background">
 
