--- a/app/src/main/res/layout/fragment_sleep_stages.xml
+++ b/app/src/main/res/layout/fragment_sleep_stages.xml
@@ -397,6 +397,7 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="20dp"
+                    android:visibility="gone"
                     android:src="@drawable/info_sleep_icon" />
             </LinearLayout>
 
