--- a/app/src/main/res/layout/activity_welcome_right_life_context_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_right_life_context_screen.xml
@@ -22,7 +22,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Welcome To"
+                android:text="Welcome to"
                 android:textSize="22sp"
                 android:layout_marginTop="80dp"
                 android:gravity="center_horizontal"
