--- a/app/src/main/res/layout/fragment_mindfull_graph.xml
+++ b/app/src/main/res/layout/fragment_mindfull_graph.xml
@@ -14,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
+
         <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
@@ -22,6 +23,7 @@
             android:layout_marginStart="22dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,6 +48,7 @@
             android:layout_width="match_parent"
             android:paddingBottom="70dp"
             android:layout_height="wrap_content">
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/calorie_balance_layout"
                 android:layout_width="match_parent"
@@ -59,10 +62,12 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:paddingBottom="20dp"
                     android:layout_height="match_parent">
+
                     <RadioGroup
                         android:id="@+id/tabGroup"
                         android:layout_width="match_parent"
@@ -75,8 +80,8 @@
                         android:layout_marginEnd="20dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        >
+                        app:layout_constraintTop_toTopOf="parent">
+
                         <RadioButton
                             android:id="@+id/rbWeek"
                             android:layout_width="0dp"
@@ -89,6 +94,7 @@
                             android:gravity="center"
                             android:button="@null"
                             android:checked="true"/>
+
                         <RadioButton
                             android:id="@+id/rbMonth"
                             android:layout_width="0dp"
@@ -114,6 +120,7 @@
                             android:gravity="center"
                             android:button="@null"/>
                     </RadioGroup>
+
                     <ImageView
                         android:id="@+id/btn_prev"
                         android:layout_width="24dp"
@@ -123,6 +130,7 @@
                         android:layout_marginTop="14dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tabGroup"/>
+
                     <ImageView
                         android:id="@+id/btn_next"
                         android:layout_width="24dp"
@@ -132,6 +140,7 @@
                         android:layout_marginTop="14dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tabGroup"/>
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -143,6 +152,7 @@
                         app:layout_constraintBottom_toBottomOf="@+id/btn_prev"
                         app:layout_constraintStart_toEndOf="@+id/btn_prev"
                         app:layout_constraintEnd_toStartOf="@+id/btn_next"/>
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
@@ -151,6 +161,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/btn_prev"/>
+
                     <TextView
                         android:id="@+id/average_text_heading"
                         android:layout_width="wrap_content"
@@ -163,25 +174,29 @@
                         android:textColor="@color/black"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"/>
+
                     <TextView
                         android:id="@+id/tv_average_number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=""
                         android:textColor="@color/black"
-                        android:textSize="20dp"
+                        android:textSize="18sp"
                         android:fontFamily="@font/dmsans_bold"
                         android:layout_marginStart="21dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/average_text_heading"/>
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Ms"
+                        android:visibility="gone"
                         android:textSize="12sp"
                         android:fontFamily="@font/dmsans_bold"
                         app:layout_constraintBottom_toBottomOf="@+id/tv_average_number"
                         app:layout_constraintStart_toEndOf="@+id/tv_average_number"/>
+
                     <ImageView
                         android:id="@+id/percentage_icon"
                         android:layout_width="12dp"
@@ -191,6 +206,7 @@
                         android:layout_marginStart="21dp"
                         app:layout_constraintTop_toBottomOf="@+id/tv_average_number"
                         app:layout_constraintStart_toStartOf="parent"/>
+
                     <TextView
                         android:id="@+id/percentage_text"
                         android:layout_width="wrap_content"
@@ -202,6 +218,7 @@
                         android:textColor="@color/green_text"
                         app:layout_constraintBottom_toBottomOf="@+id/percentage_icon"
                         app:layout_constraintStart_toEndOf="@+id/percentage_icon"/>
+
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -209,6 +226,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:id="@+id/lyt_chart">
+
                         <com.github.mikephil.charting.charts.BarChart
                             android:id="@+id/heartRateChart"
                             android:layout_width="match_parent"
@@ -219,6 +237,7 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             />
+
                         <FrameLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -249,6 +268,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:id="@+id/tv_mindfull_title"
                 android:layout_width="0dp"
@@ -265,6 +285,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/calorie_balance_layout"
                 app:layout_constraintStart_toStartOf="parent"
                 />
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -281,7 +302,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_mindfull_title"
                 app:layout_constraintStart_toStartOf="parent"/>
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
