--- a/app/src/main/res/layout/activity_breath_work_context_screen.xml
+++ b/app/src/main/res/layout/activity_breath_work_context_screen.xml
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Breathe Deeper, Feel Better"
-                android:textSize="20sp"
+                android:textSize="@dimen/textsize_large24sp"
                 android:layout_marginTop="24dp"
                 android:gravity="center_horizontal"
                 android:fontFamily="@font/dmsans_bold"
@@ -71,7 +71,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Practice 4 guided breathing techniques in real-time with visual inhale/exhale cues."
-                    android:textSize="14sp"
+                    android:textSize="@dimen/textsize_large"
                     android:layout_marginHorizontal="12dp"
                     android:fontFamily="@font/dmsans_regular"
                     android:textColor="@color/txt_color_journal_date"/>
@@ -95,7 +95,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Add your favorites to your daily tools for progress tracking and routine calm."
-                    android:textSize="14sp"
+                    android:textSize="@dimen/textsize_large"
                     android:layout_marginHorizontal="12dp"
                     android:fontFamily="@font/dmsans_regular"
                     android:textColor="@color/txt_color_journal_date"/>
@@ -120,7 +120,7 @@
         <Button
             android:id="@+id/btnNext"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="52dp"
             android:text="Next"
             android:textSize="14sp"
             android:layout_marginTop="16dp"
