--- a/app/src/main/res/layout/fragment_think_right_landing.xml
+++ b/app/src/main/res/layout/fragment_think_right_landing.xml
@@ -210,7 +210,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/eatright_text_color"
                         android:text="Mindfulness Metric"
-                        android:fontFamily="@font/dmsans_medium"
+                        android:fontFamily="@font/dmsans_bold"
                         android:textSize="16sp"
                         android:layout_marginStart="6dp"
                         app:layout_constraintBottom_toBottomOf="@+id/balance_icon"
@@ -225,6 +225,17 @@
                         android:layout_marginEnd="20dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+                    <View
+                        android:id="@+id/view_mindfull_matrix"
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/gray"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/img_mindfull_arrow"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginStart="30dp"
+                        android:layout_marginEnd="30dp"/>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/noDataMindFullnessMetric"
@@ -232,7 +243,7 @@
                         android:layout_height="wrap_content"
                         android:visibility="gone"
                         android:layout_marginTop="10dp"
-                        app:layout_constraintTop_toBottomOf="@+id/img_mindfull_arrow"
+                        app:layout_constraintTop_toBottomOf="@+id/view_mindfull_matrix"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent">
                         <TextView
@@ -267,7 +278,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_marginStart="10dp"
-                        app:layout_constraintTop_toBottomOf="@id/img_mindfull_arrow"
+                        app:layout_constraintTop_toBottomOf="@id/view_mindfull_matrix"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:weightSum="10"
@@ -406,7 +417,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/eatright_text_color"
                         android:text="Mindfulness Metric"
-                        android:fontFamily="@font/dmsans_medium"
+                        android:fontFamily="@font/dmsans_bold"
                         android:textSize="16sp"
                         android:layout_marginStart="6dp"
                         app:layout_constraintBottom_toBottomOf="@id/img_mindfull_icon"
@@ -518,11 +529,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="-Author Name"
-                        android:fontFamily="@font/merriweather_bold"
+                        android:fontFamily="@font/dmsans_bold"
                         android:textColor="@color/eatright_text_color"
                         android:textSize="16sp"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="20dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/tv_quote_desc" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
