--- a/app/src/main/res/layout/activity_home_new.xml
+++ b/app/src/main/res/layout/activity_home_new.xml
@@ -195,6 +195,96 @@
                             android:src="@drawable/arrow_right" />
                     </LinearLayout>
                 </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/flFreeTrial"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:visibility="visible"
+                    android:layout_marginVertical="16dp">
+
+                    <com.jetsynthesys.rightlife.ai_package.ui.eatright.fragment.AnimatedGlowGradientBorderView
+                        android:layout_width="match_parent"
+                        android:layout_height="140dp"
+                        android:layout_gravity="center" />
+
+                    <LinearLayout
+                        android:id="@+id/llFreeTrial"
+                        android:layout_width="match_parent"
+                        android:layout_height="136dp"
+                        android:orientation="vertical"
+                        android:paddingHorizontal="16dp"
+                        android:layout_marginHorizontal="2dp"
+                        android:background="@drawable/roundedcornerbutton_medium"
+                        android:backgroundTint="@color/white"
+                        android:clipToPadding="false"
+                        android:layout_gravity="center">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginVertical="8dp">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/img_rightlife_pro"
+                                android:layout_alignParentStart="true" />
+
+                            <ImageView
+                                android:id="@+id/nextArrowFreeTrial"
+                                android:layout_width="18dp"
+                                android:layout_height="18dp"
+                                android:layout_alignParentEnd="true"
+                                android:src="@drawable/next_arrow" />
+                        </RelativeLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="4dp"
+                            android:text="Experience how RightLife can truly improve your health with a 7 day free trial."
+                            android:fontFamily="@font/dmsans_regular"
+                            android:textColor="@color/txt_color_header"
+                            android:textSize="@dimen/textsize_small" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginVertical="12dp"
+                            android:gravity="center_vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/dmsans_bold"
+                                android:text="₹0"
+                                android:textColor="@color/txt_color_header"
+                                android:textSize="32sp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginHorizontal="8dp"
+                                android:layout_marginTop="4dp"
+                                android:text="₹3,499"
+                                android:textColor="#767676"
+                                android:fontFamily="@font/dmsans_medium"
+                                android:textSize="@dimen/textsize_small" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="4dp"
+                                android:text="No Payment Details Needed"
+                                android:textColor="#0B9C6B"
+                                android:fontFamily="@font/dmsans_bold"
+                                android:textSize="@dimen/textsize_small" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </FrameLayout>
                 <!-- Fragment Container -->
                 <include
                     android:id="@id/trialExpiredLayout"
@@ -284,7 +374,7 @@
                 android:id="@+id/icon_explore"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/homemenu" />
+                android:src="@drawable/my_health_menu" />
 
             <TextView
                 android:id="@+id/label_explore"
