--- a/app/src/main/res/layout/fragment_home_explore.xml
+++ b/app/src/main/res/layout/fragment_home_explore.xml
@@ -24,19 +24,46 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewPager"
                     android:layout_width="match_parent"
                     android:layout_height="450dp"
-                    android:layout_margin="-20dp"
                     android:clipChildren="false"
                     android:clipToPadding="false"
                     android:paddingStart="2dp"
                     android:paddingEnd="2dp"
+                    android:layout_marginHorizontal="@dimen/margin_card_16dp"
                     android:visibility="gone" />
 
+            </RelativeLayout>
 
+            <RelativeLayout
+                android:id="@+id/rlJumpInBack"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/img_jump_back_in_next"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/next_arrow_dashboard"
+                    android:layout_margin="16dp"
+                    android:layout_alignParentEnd="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:text="Jump Back In"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/dmsans_bold"
+                    android:textColor="@color/txt_color_header" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerViewJumpBackIn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/img_jump_back_in_next" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -50,7 +77,6 @@
                     android:id="@+id/tv_header_rledit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
                     android:layout_marginStart="10dp"
                     android:fontFamily="@font/merriweather_bold"
                     android:text="What does your health say today?"
