--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -2,9 +2,12 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/tools"
     android:layout_margin="15dp"
     card_view:cardCornerRadius="16dp"
-    card_view:cardElevation="8dp">
+    card_view:cardElevation="8dp"
+    app:cardPreventCornerOverlap="true"
+    app:ignore="NamespaceTypo">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -15,6 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
+            android:background="@drawable/bg_rounded_corners"
+            android:clipToOutline="true"
             android:src="@drawable/facialconcept" />
 
         <TextView
