--- a/app/src/main/res/layout/item_affirmation.xml
+++ b/app/src/main/res/layout/item_affirmation.xml
@@ -9,7 +9,7 @@
         <!-- Icon Box -->
         <FrameLayout
             android:layout_width="84dp"
-            android:layout_height="94dp"
+            android:layout_height="84dp"
             android:background="@drawable/yellow_curved_affirmation"
             android:layout_marginEnd="16dp">
 
@@ -49,7 +49,7 @@
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="8dp" />
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/createPlaylistButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -62,4 +62,9 @@
                 android:paddingEnd="20dp"
                 android:background="@drawable/yellow_round_bg" />
         </LinearLayout>
+    <ImageView
+        android:id="@+id/tool_select_button_affirmation"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/add_think_brown_icon"/>
     </LinearLayout>
