--- a/app/src/main/res/layout/item_tools.xml
+++ b/app/src/main/res/layout/item_tools.xml
@@ -37,8 +37,9 @@
     </LinearLayout>
         <ImageView
             android:id="@+id/tool_select_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/add_think_brown_icon"/>
 </LinearLayout>
 
