--- a/app/src/main/res/layout/activity_jump_back_in.xml
+++ b/app/src/main/res/layout/activity_jump_back_in.xml
@@ -60,10 +60,17 @@
             android:layout_marginHorizontal="8dp" />
     </RelativeLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvJumpBackIn"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="16dp" />
+        android:layout_height="match_parent">
+
+        <include layout="@layout/loader_layout" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvJumpBackIn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="16dp" />
+    </RelativeLayout>
 
 </LinearLayout>
